# system_proxy_resolver

./: .metadata  README.md  ffigen.yaml  melos.yaml  pubspec.yaml
.github/workflows/: ci.yml
darwin/: system_proxy_resolver.m
example/: pubspec.yaml
example/integration_test/: proxy_helper.dart  system_proxy_settings_test.dart
example/lib/: main.dart
example/test/: widget_test.dart
ios/: system_proxy_resolver.podspec
lib/: system_proxy_resolver.dart  system_proxy_resolver_platform_interface.dart
lib/src/: system_proxy_resolver.dart  system_proxy_resolver_bindings_generated.dart  system_proxy_resolver_ffi.dart  system_proxy_resolver_platform_interface.dart
macos/: system_proxy_resolver.podspec
macos/Classes/: system_proxy_resolver.m
src/: system_proxy_resolver.h
system_proxy_resolver/: .flutter-plugins  .flutter-plugins-dependencies  README.md  pubspec.yaml
system_proxy_resolver/example/: system_proxy_resolver_example.dart
system_proxy_resolver/example_flutter/: README.md  (+1 more)
system_proxy_resolver_federated/: LICENSE  README.md  pubspec.yaml
system_proxy_resolver_foundation/: README.md  ffigen.yaml  pubspec.yaml
system_proxy_resolver_platform_interface/: README.md  pubspec.yaml
system_proxy_resolver_windows/: .metadata  README.md  ffigen.yaml  pubspec.yaml
system_proxy_resolver_windows/src/: CMakeLists.txt  system_proxy_resolver_windows.c  system_proxy_resolver_windows.h
test/: system_proxy_resolver_method_channel_test.dart  system_proxy_resolver_test.dart
tools/: update-dart-sdk.py
windows/: CMakeLists.txt  system_proxy_resolver.cpp
(+62 files in other folders)
